package uml;

public interface PriceDecorator {
    Double getPrice();
}
