@startuml

title __UML's Class Diagram__\n

  package uml {
    class BuildOrder {
        {static} + getOrder()
    }
  }
  

  package uml {
    class Burger {
        - options : String[]
        + Burger()
        + setOptions()
        + getDescription()
    }
  }
  

  package uml {
    class Cheese {
        - options : String[]
        + Cheese()
        + setOptions()
        + getDescription()
    }
  }
  

  package uml {
    class Client {
        {static} + runTest()
    }
  }
  

  package uml {
    interface Component {
        {abstract} + printDescription()
        {abstract} + addChild()
        {abstract} + removeChild()
        {abstract} + getChild()
    }
  }
  

  package uml {
    class Composite {
        # components : ArrayList<Component>
        # description : String
        + Composite()
        + printDescription()
        + addChild()
        + removeChild()
        + getChild()
    }
  }
  

  package uml {
    class CustomBurger {
        + CustomBurger()
        + setDecorator()
        + printDescription()
    }
  }
  

  package uml {
    class Leaf {
        - description : String
        # price : Double
        + Leaf()
        + Leaf()
        + printDescription()
        + addChild()
        + removeChild()
        + getChild()
    }
  }
  

  package uml {
    abstract class LeafDecorator {
        + LeafDecorator()
        + wrapDecorator()
        + getPrice()
        {abstract} + setOptions()
        {abstract} + getDescription()
        + printDescription()
    }
  }
  

  package uml {
    class Premium {
        - options : String[]
        + Premium()
        + setOptions()
        + getDescription()
    }
  }
  

  package uml {
    interface PriceDecorator {
        {abstract} + getPrice()
    }
  }
  

  package uml {
    class Sauce {
        - options : String[]
        + Sauce()
        + setOptions()
        + getDescription()
    }
  }
  

  package uml {
    class Toppings {
        - options : String[]
        + Toppings()
        + setOptions()
        + getDescription()
    }
  }
  

  Burger -up-|> LeafDecorator
  Cheese -up-|> LeafDecorator
  Composite -up-|> Component
  CustomBurger -up-|> Composite
  CustomBurger o-- PriceDecorator : decorator
  Leaf -up-|> Component
  LeafDecorator -up-|> PriceDecorator
  LeafDecorator -up-|> Leaf
  LeafDecorator o-- PriceDecorator : wrapped
  Premium -up-|> LeafDecorator
  Sauce -up-|> LeafDecorator
  Toppings -up-|> LeafDecorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
